# zkid-benchmarks

./: .gitignore  Cargo.toml
.github/workflows/: rust_benchmarks.yml
binius/: Cargo.toml
plonky2/: Cargo.toml
plonky3-powdr/: Cargo.toml
plonky3-powdr/guest/: Cargo.toml
risc0/: .gitignore  Cargo.toml  README.md  risc0_proving.sh  risc0_proving_mac.sh  risc0_proving_ubuntu.sh
risc0/methods/guest/: Cargo.toml
risc0/src/: main.rs
risc0/src/benches/: big_sha2.rs  mod.rs
