[workspace]
members = [
    "binius",
    "plonky2",
    "plonky3-powdr"
]
workspace.resolver = "3"
[workspace.dependencies]
anyhow = "1.0.81"
criterion = "0.5.1"
env_logger = "0.10.0"
itertools = "0.13.0"
log = "0.4.14"
rand = "0.8.5"
sha2 = "0.10"
tikv-jemalloc-ctl = {version="0.6.0", features=["stats"]}
tikv-jemallocator = {version="0.6.0", features=["stats"]}
memory-stats = "1.2.0"

